font changed OUR PHOTO GALLERY

--- a/saurav/gallery/gallery.html
+++ b/saurav/gallery/gallery.html
@@ -21,7 +21,7 @@
     <input type="radio" name="photos" id="check4">
 
     <div class="container">
-        <h1>OUR PHOTO GALLERY</h1>
+        <h1 style="font-family: 'Merienda', cursive;" >OUR PHOTO GALLERY</h1>
 
         <div class="top-content">
             <h3>Photo Gallery</h3>
