made cursor pointer
while mousehoverover the card cursor changes into pointer

--- a/yamini/index2.html
+++ b/yamini/index2.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
         <div class="d-flex flex-row ml-2 or">
-        <div  onclick="window.open('add.html','_parent')"class="card ml-4 text-center or" style="width: 24rem;">
+        <div  onclick="window.open('add.html','_parent')"class="card ml-4 text-center or" style="width: 24rem; cursor: pointer;">
             <img class="card-img-top" src="c1.jpg" alt="Card image cap">
             <div class="card-body">
                 <h2><i class="itah">Dreamy Decadence</i></h2>
@@ -38,7 +38,7 @@
               <p class="card-text">From the most decadent florals we’ve ever laid eyes on to custom lounge spaces Every…</p>
             </div>
           </div>
-          <div  onclick="window.open('add2.html', '_parent')" class="card ml-4 text-center or" style="width: 24rem;">
+          <div  onclick="window.open('add2.html', '_parent')" class="card ml-4 text-center or" style="width: 24rem; cursor: pointer;">
             <img class="card-img-top" src="c2.jpg" alt="Card image cap">
             <div class="card-body">
                 <h2><i class="itah">Wedding Arch Ideas</i></h2>
@@ -46,7 +46,7 @@
               <p class="card-text">The wedding arch frames photos that last a lifetime and is often the very first…</p>
             </div>
           </div>
-          <div  onclick="window.open('add3.html', '_parent')" class="card ml-4 text-center or" style="width: 24rem;">
+          <div  onclick="window.open('add3.html', '_parent')" class="card ml-4 text-center or" style="width: 24rem; cursor: pointer;">
             <img class="card-img-top" src="c3.jpg" alt="Card image cap">
             <div class="card-body">
                 <h2><i class="itah">Wedding Food that Wows</i></h2>
