--- a/saurav/gallery/gallery.html
+++ b/saurav/gallery/gallery.html
@@ -108,7 +108,21 @@
         </div>
 
     </div>
-
+<script>
+    let allInput = document.querySelectorAll('input[name=photos]');
+    for(let i = 0; i < allInput.length; i++){
+        allInput[i].addEventListener('click' ,function(){
+            let frames = parent.iframe;
+            for( let x = 0; x < frames.length; x++) {
+                let mainFrame = parent.parent.iframe[2];
+                mainFrame.style.height = mainFrame.contentWindow.document.body.scrollHeight + 'px';
+                frames[x].style.height = 
+                frames[x].contentWindow.document.body.scrollHeight + "px";
+            }
+          
+        })
+    }
+</script>
 
 </body>
 
