View more button resolved

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             You can count on us to be calm, loving, hands-on and, most
             importantly, professional throughout your entire planning process.
           </p>
-          <button>View more...</button>
+          <button onclick="document.getElementById('About').scrollIntoView()" >View more...</button>
         </div>
         <img src="img/welcomePartImg.jpg" alt="Welcome-Image" />
       </div>
