View more button resolved

--- a/yamini/index.html
+++ b/yamini/index.html
@@ -69,7 +69,7 @@
         <div class="locate">
             <h1 id="htag">DREAM LOCATION</h1>
             <h2 id="itag"><i>In Greece</i></h2>
-            <button type="button" class="btn btn-outline-secondary hove">Read More</button>
+            <button onclick="parent.iframe[1].scrollIntoView()" type="button" class="btn btn-outline-secondary hove">Read More</button>
         </div>
         </div>
     </div>
