view more button resolved

--- a/yamini/index2.html
+++ b/yamini/index2.html
@@ -57,7 +57,7 @@
           </div>
     </div>
     <div class="continer text-center">
-        <button type="button" class="btn btn-outline-secondary hove">Read More</button>
+        <button onclick="parent.iframe[2].scrollIntoView()" type="button" class="btn btn-outline-secondary hove">Read More</button>
     </div>
 </body>
 </html>
